Fix shortcut cards margins on mobile

--- a/assets/styles/sections/shortcuts.scss
+++ b/assets/styles/sections/shortcuts.scss
@@ -75,7 +75,7 @@
 
       .card-text {
 	      margin-top: 10px;
-        margin-bottom: 0;
+        margin-bottom: 10px;
       }
     }
   }
